# assets/api.yml
@@ -141,18 +141,32 @@ paths:
         default:
           $ref: '#/components/responses/Error'
 
-  # NAMES
-  /names:
+  # TRANSLATION
+  /idtranslation:
     post:
       summary: Translates ids to names
       description: Translates user ids to first and last name
       tags:
         - Users
       requestBody:
-        $ref: '#/components/requestBodies/postNames'
+        $ref: '#/components/requestBodies/postIdTranslation'
       responses:
         200:
-          $ref: '#/components/responses/postNames'
+          $ref: '#/components/responses/postIdTranslation'
+        default:
+          $ref: '#/components/responses/Error'
+
+  /emailtranslation:
+    post:
+      summary: Translates emails to ids
+      description: Translates user emails to ids
+      tags:
+        - Users
+      requestBody:
+        $ref: '#/components/requestBodies/postEmailTranslation'
+      responses:
+        200:
+          $ref: '#/components/responses/postEmailTranslation'
         default:
           $ref: '#/components/responses/Error'
 
@@ -221,8 +235,8 @@ components:
           schema:
             $ref: '#/components/schemas/LoginData'
 
-    # NAMES
-    postNames:
+    # TRANSLATION
+    postIdTranslation:
       required: true
       content:
         application/json:
@@ -230,6 +244,15 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/Id'
+
+    postEmailTranslation:
+      required: true
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Email'
 
   # ---------------------------------------------------------------------------
   responses:
@@ -265,13 +288,22 @@ components:
           schema:
             $ref: '#/components/schemas/Session'
 
-    # NAMES
-    postNames:
-      description: Names retrieved successfully.
+    # TRANSLATION
+    postIdTranslation:
+      description: IDs translated successfully.
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Names'
+
+    postEmailTranslation:
+      description: Emails translated successfully.
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Id'
 
     # STATUS
     health:
@@ -472,6 +504,8 @@ components:
         someId:
           type: object
           properties:
+            email:
+              $ref: '#/components/schemas/Email'
             firstName:
               type: string
               example: 'Memis'
@@ -479,6 +513,7 @@ components:
               type: string
               example: 'Pomofot'
           required:
+            - email
             - firstName
             - lastName
 
